<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/margin_left"
    android:layout_marginRight="@dimen/margin_left"
    tools:context=".LaunchActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_setting_title"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_between"
        android:layout_marginBottom="@dimen/margin_between"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_between">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_period"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinner_scan"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_height"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_between">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording_length"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinner_recording"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_height"
            android:layout_gravity="right"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="8dp"
            >

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Base URL"
            android:layout_marginTop="8dp"
            />

            <EditText
                android:id="@+id/et_baseurl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="http://10.80.1.18:9001/smzb/api/"
                />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Path"
            android:layout_marginTop="8dp"
            />

            <EditText
                android:id="@+id/et_savepath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="/storage/emulated/0/Pictures/screenshots"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="延后录影(赛事开始+分钟)"
                android:layout_marginTop="8dp"
                />

            <EditText
                android:id="@+id/et_shift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                />


        </LinearLayout>
    </ScrollView>




    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_desc"
        android:layout_marginBottom="@dimen/margin_between"
        />



    <TextView
        android:id="@+id/tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_start"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/bg_btn_round_border"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_between" />
</LinearLayout>